--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -20,6 +20,9 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
+    form:
+        resources:
+            - 'DMSBaseBundle:Form:form_div_layout.html.twig'
 
 # Assetic Configuration
 assetic:
