Implemented TwitterApiService. More work around LomaTweeWorker.

--- a/src/App/Bundle/WebBundle/Resources/config/services.yml
+++ b/src/App/Bundle/WebBundle/Resources/config/services.yml
@@ -1,6 +1,12 @@
 services:
+  twitter.api:
+    class: App\Bundle\WebBundle\Services\Twitter\ApiService
+    arguments:
+      twitter: @fos_twitter.api
+      container: @service_container
+  
   lomatwee.worker:
     class: App\Bundle\WebBundle\Services\LomaTweeWorkerService
     arguments:
-      twitter: @fos_twitter.api
+      twitter: @twitter.api
       container: @service_container
