--- a/src/App/Bundle/WebBundle/Resources/config/services.yml
+++ b/src/App/Bundle/WebBundle/Resources/config/services.yml
@@ -8,12 +8,12 @@ services:
   lomatwee.worker:
     class: App\Bundle\WebBundle\Services\LomaTweeWorkerService
     arguments:
-      twitter: @fos_twitter.api
+      twitter: @twitter.api
       container: @service_container
       
   lomadee.api:
-      class: App\Bundle\WebBundle\Services\Lomadee\ApiService
-      arguments:
-          container: @service_container
-          appid: $lomadee_app_id
-          development: $lomadee_use_sandbox
+    class: App\Bundle\WebBundle\Services\Lomadee\ApiService
+    arguments:
+      container: @service_container
+      appid: %lomadee_app_id%
+      sandbox: %lomadee_use_sandbox%
